added a new forgot html page

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Paget</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="loginstyle.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
         
         <div class="remember-forgot">
             <label><input type="checkbox"> Remember me</label>
-            <a href="#">Forgot password?</a>
+            <a href="forgot.html">Forgot password?</a>
         </div>
 
         <button type="submit" class="btn">Login</button>
